--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <!-- Cards for GPU renting -->
     <div id="cards">
       <div class="card" onclick="selectCard('Core i9')">
-        <img src="images/corei9.png" alt="Core i9">
+        <img src="images/corei9.png" alt="corei9.png">
         <h3>Core i9 - 10 GH/s</h3>
         <p>Price: 60,000 TON</p>
       </div>
       <div class="card" onclick="selectCard('RTX 4090')">
-        <img src="images/rtx4090.png" alt="RTX 4090">
+        <img src="images/rtx4090.png" alt="rtx4090.png">
         <h3>RTX 4090 - 100 GH/s</h3>
         <p>Price: 500,000 TON</p>
       </div>
       <div class="card" onclick="selectCard('A100 GPU')">
-        <img src="images/a100gpu.png" alt="A100 GPU">
+        <img src="images/a100gpu.png" alt="a100gpu.png">
         <h3>A100 GPU - 1000 GH/s</h3>
         <p>Price: 5,000,000 TON</p>
       </div>
